Fix tooltip icon from clipping

--- a/_sass/_tooltips.scss
+++ b/_sass/_tooltips.scss
@@ -7,7 +7,7 @@
     padding-right: 1.2em;
     background-image: url('../images/GlossaryQuestion.svg');
     background-size: 14px;
-    background-position: right center;
+    background-position: 99% center;
     background-repeat: no-repeat;
     display: inline-block;
     &:hover {
